使用 Colaboratory 创建

--- a/02_Chinese_Text_Classification_Pytorch.ipynb
+++ b/02_Chinese_Text_Classification_Pytorch.ipynb
@@ -6,7 +6,7 @@
       "name": "02_Chinese-Text-Classification-Pytorch.ipynb",
       "provenance": [],
       "mount_file_id": "1izYNLq2z-nj_ztSliRit9Rf0tdniY7Of",
-      "authorship_tag": "ABX9TyPCurCdDlFBWqVPWwS+pJSZ",
+      "authorship_tag": "ABX9TyMEALC/G19U9j5r2ES32kd3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ShinerayLu/NN/blob/main/02_Chinese_Text_Classification_Pytorch.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ShinerayLu/NLP-First-Class/blob/main/02_Chinese_Text_Classification_Pytorch.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -39,7 +39,7 @@
       "source": [
         "pip install tensorboardX"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -61,6 +61,34 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "pb_pv_EizZSI",
+        "outputId": "aa1600f9-941f-4384-8b17-b2f535a4d14e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 109
+        }
+      },
+      "source": [
+        "!git clone https://github.com/649453932/Chinese-Text-Classification-Pytorch.git"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'Chinese-Text-Classification-Pytorch'...\n",
+            "remote: Enumerating objects: 215, done.\u001b[K\n",
+            "remote: Total 215 (delta 0), reused 0 (delta 0), pack-reused 215\u001b[K\n",
+            "Receiving objects: 100% (215/215), 42.09 MiB | 38.10 MiB/s, done.\n",
+            "Resolving deltas: 100% (118/118), done.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "57DT31vcAG5Z",
         "outputId": "fc79c2ab-ce81-429a-9a27-088c7c677451",
         "colab": {
@@ -71,7 +99,7 @@
       "source": [
         "!nvidia-smi"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,9 +135,9 @@
         "id": "14oj18EfAloM"
       },
       "source": [
-        "!mv drive/My\\ Drive/NLP第一次课/02_Chinese-Text-Classification-Pytorch/02_Chinese-Text-Classification-Pytorch/* ."
+        "!mv Chinese-Text-Classification-Pytorch/* ."
       ],
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -125,7 +153,7 @@
       "source": [
         "!python run.py --model DPCNN"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,7 +268,7 @@
       "source": [
         "!python run.py --model FastText"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -391,7 +419,7 @@
       "source": [
         "!python run.py --model TextCNN"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -531,7 +559,7 @@
       "source": [
         "!python run.py --model TextRCNN"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -637,7 +665,7 @@
       "source": [
         "!python run.py --model TextRNN"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -766,7 +794,7 @@
       "source": [
         "!python run.py --model TextRNN_Att"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -887,7 +915,7 @@
       "source": [
         "!python run.py --model Transformer"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
